# JX3DPS

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  config.json  main copy.cpp  新建 Microsoft PowerPoint 演示文稿.pptx
.claude/: settings.local.json
.github/scripts/: install-gcc.ps1  windows-gcc-publish.ps1  windows-mingw-publish.ps1  windows-publish.ps1
.github/workflows/: linux-gcc-build.yml  macos.yml  release.yml  ubuntu.yml  windows-gcc.yml  windows-mingw-build.yml  windows-mingw.yml  windows.yml
3rd/: CMakeLists.txt
3rd/QCustomPlot/: CMakeLists.txt
app/: CMakeLists.txt  ComboBoxSlot.cpp  ComboBoxSlot.h  CustomGroupBox.cpp  CustomGroupBox.h  CustomLineEdit.cpp  CustomLineEdit.h  CustomTabWidget.cpp  CustomTabWidget.h  EquipComboBox.cpp  EquipComboBox.h  Highlighter.cpp  Highlighter.h  ImportWidget.cpp  ImportWidget.h  JX3DPSImportWidget.cpp  JX3DPSImportWidget.h  JX3DPSJsonParser.cpp  JX3DPSJsonParser.h  JX3DPSStatsWidget.cpp  JX3DPSStatsWidget.h  JX3DPSWidget.cpp  JX3DPSWidget.h  MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h  MarqueeLabel.cpp  MarqueeLabel.h  SlotComboBox.cpp  SlotComboBox.h  StatsWidget.cpp  TimeLineWidget.cpp  TimeLineWidget.h  Widget.cpp  Widget.h  main.cpp
app/JX3DPS Application/: CMakeLists.txt  Widget.cpp  Widget.h  main.cpp
apps/: CMakeLists.txt
apps/JX3DPS/: CMakeLists.txt  main.cpp
apps/JX3DPS/Core/: 1.json  Attr.cpp  Attr.h  Buff.cpp  Buff.h  CMakeLists.txt  Damage.h  Defs.h  Globals.h  JX3DPS.cpp  JX3DPS.h  JX3DPSTypes.h  JX3Params.h  Json.cpp  Json.h  KeyFrame.cpp  KeyFrame.h  Macro.cpp  Macro.h  Optimization.h  Player.cpp  Player.h  Skill.cpp  Skill.h  TaiXuJianYi.cpp  TaiXuJianYi.h  Target.cpp  Target.h  Version.h
apps/JX3DPS/UI/: BlurImage.hpp  Button.cpp  Button.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  Color.h  ComboBox.cpp  ComboBox.h  ComboBox1.cpp  ComboBox1.h  DataBars.cpp  DataBars.h  FramelessWidget.h  GroupBox.cpp  GroupBox.h  ImportWidget.cpp  ImportWidget.h  LineEdit.cpp  LineEdit.h  Network.cpp  Network.h  PlainTextEdit.cpp  PlainTextEdit.h  ProgressBar.cpp  ProgressBar.h  SpinBox.cpp  SpinBox.h  Splitter.cpp  Splitter.h  StatsWidget.cpp  StatsWidget.h  TabWidget.cpp  TabWidget.h  TableView.cpp  TableView.h  ThemeColors.h  Widget.cpp  Widget.h
apps/JX3DPS/UI/BaseWidgets/: ComboBox.cpp  ComboBox.h  MarqueeLabel.h
apps/desktop/: CMakeLists.txt
apps/web/: CMakeLists.txt
assets/: app_icon.rc  resources.qrc
assets/images/: Thumbs.db
benchmark/: TestRoll.cpp
cmake/: Common.cmake  JX3DPSCoreConfig.cmake.in  Version.cmake  WidgetConfig.cmake.in  targets.cmake  utils.cmake  version.cmake
config/: 1.json  config - 副本.json  config(1).json  config.json
docs/: 新建 DOC 文档.doc
example/: 1.md  3.md  Ast.hpp  CMakeLists.txt  Lexer.hpp  Parser.hpp  main.cpp
examples/: 1.md  3.md  CMakeLists.txt
include/: JX3DPS.h  Version.h  jx3dps.h
include/Core/: Attr.h  Common.h
modules/: CMakeLists.txt
modules/Common/: Common.h  ConstVal.h  Utils.h  Version.h
modules/Core/: Attr.cpp  Attr.h  Buff.cpp  Buff.h  CMakeLists.txt  Cast.cpp  Cast.h  Event.cpp  Event.h  Global.h  Macro.cpp  Macro.h  Player.cpp  Player.h  Skill.cpp  Skill.h  Target.cpp  Target.h
modules/JX3DPS/: CMakeLists.txt  JX3DPS.cpp  JX3DPS.h
modules/JX3DPS/Common/: Version.h
modules/ThreadPool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h
modules/Utils/: Utils.h
modules/Widgets/: CMakeLists.txt
modules/Widgets/StackWidget/: CMakeLists.txt  StackWidget.cpp  StackWidget.h  TabWidget.h
modules/thread_pool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.hpp  thread_pool.cpp  thread_pool.h
perf/: CMakeLists.txt
perf/benchmarks/: CMakeLists.txt
perf/experiments/: CMakeLists.txt
perf/experiments/vectorized/: CMakeLists.txt
performance/: CMakeLists.txt
performance/doc/: cpp20_static_compilation_time_calculations_with_concepts.md
performance/interpreter/: CMakeLists.txt  main.cpp
performance/interpreter2/: CMakeLists.txt  main.cpp
resources/: resources.qrc  win32app_icon.rc
scripts/: clear_all_tags.bat  commit-msg  generate_changelog.sh  pre-commit  update_git_tag.bat
scripts/githooks/: commit-msg
src/: Buff.cpp  Buff.h  Buff3rd.cpp  Buff3rd.h  CMakeLists.txt  Concepts.h  Condition.hpp  ConditionEvaluator.hpp  Context.cpp  Context.h  Damage.hpp  Error.h  Expression.cpp  Expression.h  JX3.h  JX3DPS.cpp  JsonParse.cpp  JsonParse.h  KeyFrame.cpp  KeyFrame.h  Log.cpp  Log.h  Player.cpp  Player.h  Player.hpp  Regex.cpp  Regex.h  SimulatorImpl.cpp  SimulatorImpl.h  Skill.cpp  Skill.h  SkillImpl.hpp  Target.hpp  TimeLine.cpp  TimeLine.hpp  Type.h  Version.h  damage.hpp  jjj.cpp  jx3.h  (+4 more)
src/Attribute/: Attribute.hpp
src/Class/: CMakeLists.txt
src/Class/FenShanJing/: FenShanJing.cpp  FenShanJing.h  FenShanJingBuff.cpp  FenShanJingBuff.h  FenShanJingSkill.cpp  FenShanJingSkill.h
src/Class/MoWen/: MoWen.cpp  MoWen.h  MoWenBuff.cpp  MoWenBuff.h  MoWenSkill.cpp  MoWenSkill.h
src/Class/TaiXuJianYi/: TaiXuJianYi.cpp  TaiXuJianYi.h  TaiXuJianYiBuff.cpp  TaiXuJianYiBuff.h  TaiXuJianYiSkill.cpp  TaiXuJianYiSkill.h
src/Class/ZiXiaGong/: ZiXiaGong.cpp  ZiXiaGong.h  ZiXiaGongBuff.cpp  ZiXiaGongBuff.h  ZiXiaGongSkill.cpp  ZiXiaGongSkill.h
src/Core/: Attr.cpp
src/Damage/: Damage.hpp
src/Global/: Defs.h  Id.h  JX3.h  Types.h  Version.h
src/Utils/: Utils.hpp
src/mount/: 凌海诀.h  太虚剑意.h
src/old/: action_binds.cpp  attribute.hpp  buff.hpp  common.h  concepts.hpp  expression_interpreter.hpp  jx3.h  jx3dps.h  player.hpp  sim.hpp  skill.hpp  tai_xu_jian_yi.cpp  tai_xu_jian_yi.h  time_line.cpp  time_line.h  type.h  version.h
src/old/old/: action_binds.cpp  action_binds.h  buff.hpp  damage.hpp  error_code.h  json.h  jx3.h  log.cpp  log.h  macro.cpp  macro.h  parser.h  player.h  simulator_impl.cpp  simulator_impl.h  skill.h  target.h  type.h  version.h  worker.h
tests/: CMakeLists.txt  TestThreadPool.cpp
tests/TestJX3DPS/: CMakeLists.txt  TestJX3DPS.cpp  TestTaiXuJianYi.json
tests/test_thread_pool/: CMakeLists.txt  test_thread_pool.cpp
tools/: CMakeLists.txt
(+133 files in other folders)
