cmake_minimum_required(VERSION 3.5)

set(PROJETC_NAME JX3DPS)

project(${PROJETC_NAME} VERSION 1.0 LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(PROJECT_SOURCES
    main.cpp
)

add_executable(${PROJETC_NAME}
    ${PROJECT_SOURCES}
)

target_link_libraries(${PROJETC_NAME} PRIVATE)